--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 concept_implementation/Closures.md
 leet_answer/~$Solution.csv
+*.xcplayground
+
+MyPlayground.playground/section-1.swift
+
+MyPlayground.playground/timeline.xctimeline
